# mkflashcards

./: Dockerfile  README.md  app.css  app.js  app.py  bulma.py  fhapp.py  grapp.py  mkflashcards.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  lint-pr.yml
