[project]
name = "mkflashcards"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.39.0",
    "beautifulsoup4>=4.12.3",
    "langchain-text-splitters>=0.3.0",
    "logfire[openai,requests,starlette]>=1.0.1",
    "markdown>=3.7",
    "openai>=1.51.0",
    "pydantic>=2.9.2",
    "python-fasthtml>=0.10.1",
    "requests>=2.32.3",
    "tiktoken>=0.8.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "Q000",
    "ANN001",
    "ANN201",
    "D103",
    "RUF006",
    "RUF013",
    "S603",
    "S607",
    "S324",
    "UP022",
    "TRY003",
    "EM102",
    "PTH107",
    "PTH118",
    "PTH122",
    "PTH123",
    "PTH110",
    "ASYNC230",
    "N802",
]

[tool.ruff.format]
quote-style = "single"

[tool.dev-dependencies]
ruff = "^0.8.2"

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]
